--- a/public/apps/geosockets_app.json
+++ b/public/apps/geosockets_app.json
@@ -1,12 +1,16 @@
 {
-  "name": "Ruby on Rails",
-  "description": "A template for getting started with the popular Ruby framework.",
-  "website": "http://rubyonrails.org",
-  "repository": "https://github.com/heroku/ruby-rails-sample",
-  "logo": "http://upload.wikimedia.org/wikipedia/commons/c/c3/Ruby_on_Rails_logo.svg",
-  "scripts": {
-    "postdeploy": "bundle && bundle exec rake bootstrap"
-  },
+  "name": "Geosockets",
+  "description": "Render website visitors on a map in realtime using WebSockets and the browser's Geolocation API.",
+  "keywords": ["geo", "gis", "map", "cartography", "analytics", "websockets"],
+  "website": "https://github.com/heroku-examples/geosockets",
+  "repository": "https://github.com/heroku-examples/geosockets",
+  "success_url": "https://github.com/heroku-examples/geosockets#readme",
+  "logo": "http://geosockets.herokuapp.com/geosockets.svg",
   "addons": [
-    "heroku-postgresql:hobby-basic:"]
+    "openredis",
+    "papertrail"
+  ],
+  "env": {
+    "BUILDPACK_URL": "https://github.com/zeke/harp-buildpack"
+  }
 }
